[gd_scene load_steps=37 format=4 uid="uid://o7o0cmlybwko"]

[ext_resource type="TileSet" uid="uid://07fq3rspk8ia" path="res://scenes/tileset.tres" id="1_iro0j"]
[ext_resource type="PackedScene" uid="uid://iu2q66clupc6" path="res://scenes/game_elements/characters/player/player.tscn" id="2_20nt6"]
[ext_resource type="SpriteFrames" uid="uid://conwqdkmqsys3" path="res://scenes/quests/story_quests/elian/player_components/elian_player.tres" id="3_xarg0"]
[ext_resource type="Script" uid="uid://c68oh8dtr21ti" path="res://scenes/game_logic/sequence_puzzle.gd" id="4_t54xw"]
[ext_resource type="PackedScene" uid="uid://b8sok264erfoc" path="res://scenes/game_elements/props/sequence_puzzle_object/sequence_puzzle_object.tscn" id="5_7jdtm"]
[ext_resource type="SpriteFrames" uid="uid://dscjk084jt1h4" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/elian_object.tres" id="6_6asd0"]
[ext_resource type="AudioStream" uid="uid://cg57q82pb243w" path="res://assets/third_party/nepalese_hand_bells/handBells-c4.ogg" id="7_tlsqf"]
[ext_resource type="AudioStream" uid="uid://b83x8h0ob5mpq" path="res://assets/third_party/nepalese_hand_bells/handBells-d4.ogg" id="8_7f16m"]
[ext_resource type="AudioStream" uid="uid://cmtiwg2cylmts" path="res://assets/third_party/nepalese_hand_bells/handBells-e4.ogg" id="9_6caan"]
[ext_resource type="AudioStream" uid="uid://8k1hyi4gjae4" path="res://assets/third_party/nepalese_hand_bells/handBells-f4.ogg" id="10_vul14"]
[ext_resource type="AudioStream" uid="uid://6oahn2ucxxjv" path="res://assets/third_party/nepalese_hand_bells/handBells-g4.ogg" id="11_kbbsn"]
[ext_resource type="AudioStream" uid="uid://bdboi4ndapqec" path="res://assets/third_party/nepalese_hand_bells/handBells-a4.ogg" id="12_qx0gp"]
[ext_resource type="PackedScene" uid="uid://be4o3ythda4cu" path="res://scenes/game_elements/props/sequence_puzzle_hint_sign/sequence_puzzle_hint_sign.tscn" id="13_0f0vj"]
[ext_resource type="SpriteFrames" uid="uid://e382i3ci5dml" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/elian_sign.tres" id="14_y538q"]
[ext_resource type="SpriteFrames" uid="uid://bmvryt0ednp1s" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/elian_sign_2.tres" id="15_imkop"]
[ext_resource type="Script" uid="uid://ccc78coj2b1li" path="res://scenes/game_logic/sequence_puzzle_step.gd" id="16_e1cf0"]
[ext_resource type="PackedScene" uid="uid://fuhl3l6gxq5k" path="res://scenes/game_elements/props/collectible_item/collectible_item.tscn" id="17_khisk"]
[ext_resource type="Script" uid="uid://bwwjldff2g8qh" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/sub_2_controller.gd" id="18_kbbsn"]
[ext_resource type="Script" uid="uid://bgmwplmj3bfls" path="res://scenes/globals/game_state/inventory/inventory_item.gd" id="18_mp2c4"]
[ext_resource type="Resource" uid="uid://bj6se73mnjeih" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/elian_sequence_puzzle.dialogue" id="19_tvi5x"]
[ext_resource type="PackedScene" uid="uid://covsdqqsd6rsy" path="res://scenes/game_elements/props/sign/sign.tscn" id="20_coke0"]
[ext_resource type="PackedScene" uid="uid://cfcgrfvtn04yp" path="res://scenes/ui_elements/hud/hud.tscn" id="21_itfvh"]
[ext_resource type="Script" uid="uid://dht7bdjypl4s1" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/sub_1_controller.gd" id="21_vul14"]
[ext_resource type="Script" uid="uid://x1mxt6bmei2o" path="res://scenes/ui_elements/cinematic/cinematic.gd" id="22_yva76"]
[ext_resource type="Texture2D" uid="uid://b8yn4tog2cnaw" path="res://scenes/quests/story_quests/shjourney/4_Laberinto/personajes/estructuras(decoracion)/llave 1.png" id="23_t54xw"]
[ext_resource type="Script" uid="uid://cghtcr8688vp4" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/key_item.gd" id="23_tlsqf"]
[ext_resource type="Texture2D" uid="uid://boeaxk35yjpwl" path="res://scenes/game_elements/props/door/components/door_closed.png" id="24_7jdtm"]
[ext_resource type="Script" uid="uid://du8wfijr35r35" path="res://scenes/game_elements/props/interact_area/components/interact_area.gd" id="25_6asd0"]
[ext_resource type="Script" uid="uid://ciibij556mscc" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/door.gd" id="25_7f16m"]
[ext_resource type="Script" uid="uid://edcifob4jc4s" path="res://scenes/game_logic/talk_behavior.gd" id="26_6asd0"]
[ext_resource type="Script" uid="uid://cq8gxcsusdrdv" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/key_system.gd" id="27_tlsqf"]
[ext_resource type="Script" uid="uid://ccbrpqcogcdwk" path="res://scenes/quests/story_quests/elian/3_sequence_puzzle/keys_hud.gd" id="30_6caan"]

[sub_resource type="Resource" id="Resource_wop6j"]
script = ExtResource("18_mp2c4")
type = 2
metadata/_custom_type_script = "uid://bgmwplmj3bfls"

[sub_resource type="CircleShape2D" id="CircleShape2D_tlsqf"]
radius = 28.284271

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7f16m"]
size = Vector2(65, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6caan"]
size = Vector2(64.5, 84.5)

[node name="SequencePuzzleTemplate" type="Node2D"]

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="Grass" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAANAAcAAQABAAEAAAANAAYAAQABAAEAAAANAAUAAQABAAEAAAANAAQAAQABAAEAAAANAAMAAQABAAEAAAANAAIAAQABAAEAAAANAAEAAQABAAEAAAAMAAcAAQABAAEAAAAMAAYAAQABAAEAAAAMAAUAAQABAAEAAAAMAAQAAQABAAEAAAAMAAMAAQABAAEAAAAMAAIAAQABAAEAAAAMAAEAAQABAAEAAAALAAcAAQABAAEAAAALAAYAAQABAAEAAAALAAUAAQABAAEAAAALAAQAAQABAAEAAAALAAMAAQABAAEAAAALAAIAAQABAAEAAAALAAEAAQABAAEAAAAKAAcAAQABAAEAAAAKAAYAAQABAAEAAAAKAAUAAQABAAEAAAAKAAQAAQABAAEAAAAKAAMAAQABAAEAAAAKAAIAAQABAAEAAAAJAAcAAQABAAEAAAAJAAYAAQABAAEAAAAJAAUAAQABAAEAAAAJAAQAAQABAAEAAAAJAAMAAQABAAEAAAAJAAIAAQABAAEAAAAIAAcAAQABAAEAAAAIAAYAAQABAAEAAAAIAAUAAQABAAEAAAAIAAQAAQABAAEAAAAIAAMAAQABAAEAAAAIAAIAAQABAAEAAAAHAAcAAQABAAEAAAAHAAYAAQABAAEAAAAHAAUAAQABAAEAAAAHAAQAAQABAAEAAAAHAAMAAQABAAEAAAAHAAIAAQABAAEAAAAGAAcAAQABAAEAAAAGAAYAAQABAAEAAAAGAAUAAQABAAEAAAAGAAQAAQABAAEAAAAGAAMAAQABAAEAAAAGAAIAAQABAAEAAAAFAAcAAQABAAEAAAAFAAYAAQABAAEAAAAFAAUAAQABAAEAAAAFAAQAAQABAAEAAAAFAAMAAQABAAEAAAAFAAIAAQABAAEAAAAFAAEAAQABAAEAAAAEAAcAAQABAAEAAAAEAAYAAQABAAEAAAAEAAQAAQABAAEAAAAEAAMAAQABAAEAAAAEAAIAAQABAAEAAAAEAAEAAQABAAEAAAADAAQAAQABAAEAAAADAAMAAQABAAEAAAADAAIAAQABAAEAAAADAAEAAQABAAEAAAACAAMAAQABAAEAAAACAAIAAQABAAEAAAACAAEAAQABAAEAAAABAAMAAQABAAEAAAABAAIAAQABAAEAAAABAAEAAQABAAEAAAACAAQAAQABAAEAAAABAAQAAQABAAEAAAAAAAQAAQABAAEAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAFAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAALAAAAAQABAAEAAAAMAAAAAQABAAEAAAAKAAAAAQABAAEAAAANAAAAAQABAAEAAAAEAAAAAQABAAEAAAADAAAAAQABAAEAAAACAAAAAQABAAEAAAABAAAAAQABAAEAAAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAgAAQABAAEAAAABAAgAAQABAAEAAAACAAgAAQABAAEAAAADAAgAAQABAAEAAAAEAAgAAQABAAEAAAAFAAgAAQABAAEAAAAGAAgAAQABAAEAAAAHAAgAAQABAAEAAAAIAAgAAQABAAEAAAAJAAgAAQABAAEAAAAKAAgAAQABAAEAAAAMAAgAAQABAAEAAAALAAgAAQABAAEAAAANAAgAAQABAAEAAAAOAAgAAQABAAEAAAAOAAcAAQABAAEAAAAOAAYAAQABAAEAAAAOAAUAAQABAAEAAAAOAAQAAQABAAEAAAAOAAMAAQABAAEAAAAOAAIAAQABAAEAAAAOAAEAAQABAAEAAAAOAAAAAQABAAEAAAAAAAUAAQABAAEAAAABAAUAAQABAAEAAAACAAUAAQABAAEAAAADAAUAAQABAAEAAAAEAAUAAQABAAEAAAADAAYAAQABAAEAAAACAAYAAQABAAEAAAABAAYAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAABAAcAAQABAAEAAAACAAcAAQABAAEAAAADAAcAAQABAAEAAAAGAAEAAQABAAEAAAAHAAEAAQABAAEAAAAIAAEAAQABAAEAAAAJAAEAAQABAAEAAAAKAAEAAQABAAEAAAAPAAkAAQACAAIAAAAPAAgAAQACAAEAAAAPAAcAAQACAAEAAAAPAAYAAQACAAEAAAAPAAUAAQACAAEAAAAPAAQAAQACAAEAAAAPAAMAAQACAAEAAAAPAAIAAQACAAEAAAAPAAEAAQACAAEAAAAPAAAAAQACAAEAAAAPAP//AQACAAAAAAAOAAkAAQABAAIAAAAOAP//AQABAAAAAAANAAkAAQABAAIAAAANAP//AQABAAAAAAAMAAkAAQABAAIAAAAMAP//AQABAAAAAAALAAkAAQABAAIAAAALAP//AQABAAAAAAAKAAkAAQABAAIAAAAKAP//AQABAAAAAAAJAAkAAQABAAIAAAAJAP//AQABAAAAAAAIAAkAAQABAAIAAAAIAP//AQABAAAAAAAHAAkAAQABAAIAAAAHAP//AQABAAAAAAAGAAkAAQABAAIAAAAGAP//AQABAAAAAAAFAAkAAQABAAIAAAAFAP//AQABAAAAAAAEAAkAAQABAAIAAAAEAP//AQABAAAAAAADAAkAAQABAAIAAAADAP//AQABAAAAAAACAAkAAQABAAIAAAACAP//AQABAAAAAAABAAkAAQABAAIAAAABAP//AQABAAAAAAAAAAkAAQABAAIAAAAAAP//AQABAAAAAAD//wkAAQAAAAIAAAD//wgAAQAAAAEAAAD//wcAAQAAAAEAAAD//wYAAQAAAAEAAAD//wUAAQAAAAEAAAD//wQAAQAAAAEAAAD//wMAAQAAAAEAAAD//wIAAQAAAAEAAAD//wEAAQAAAAEAAAD//wAAAQAAAAEAAAD/////AQAAAAAAAAA=")
tile_set = ExtResource("1_iro0j")

[node name="Sand" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAD//wcAAQAFAAMAAAAAAAcAAQAGAAMAAAABAAcAAQAGAAMAAAACAAcAAQAGAAMAAAADAAcAAQAHAAIAAAADAAYAAQAIAAEAAAADAAUAAQAFAAAAAAAEAAUAAQAGAAMAAAAFAAUAAQAGAAMAAAAGAAUAAQAGAAMAAAAHAAUAAQAGAAMAAAAIAAUAAQAGAAMAAAAJAAUAAQAGAAMAAAAKAAUAAQAGAAMAAAALAAUAAQAHAAIAAAALAAQAAQAFAAAAAAAMAAQAAQAGAAMAAAANAAQAAQAGAAMAAAAOAAQAAQAGAAMAAAAPAAQAAQAHAAMAAAA=")
tile_set = ExtResource("1_iro0j")

[node name="OnTheGround" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="OnTheGround" instance=ExtResource("2_20nt6")]
position = Vector2(383, 371)
sprite_frames = ExtResource("3_xarg0")

[node name="SequencePuzzle" type="Node2D" parent="OnTheGround"]
y_sort_enabled = true
position = Vector2(-1, 0)
script = ExtResource("4_t54xw")
metadata/_custom_type_script = "uid://c68oh8dtr21ti"

[node name="Objects" type="Node2D" parent="OnTheGround/SequencePuzzle"]
y_sort_enabled = true
position = Vector2(356, 453)

[node name="Blue" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_7jdtm")]
modulate = Color(0, 0.4, 0.6, 1)
position = Vector2(306, -250)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("7_tlsqf")

[node name="Pink" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_7jdtm")]
modulate = Color(0.89, 0.2937, 0.804817, 1)
position = Vector2(384, -197)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("8_7f16m")

[node name="Yellow" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_7jdtm")]
modulate = Color(0.89, 0.804817, 0.2937, 1)
position = Vector2(459, -148)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("9_6caan")

[node name="Green" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_7jdtm")]
modulate = Color(0.188235, 0.717647, 0, 1)
position = Vector2(536, -97)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("10_vul14")

[node name="Purple" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_7jdtm")]
modulate = Color(0.464066, 0.2937, 0.89, 1)
position = Vector2(535, 37)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("11_kbbsn")

[node name="Red" parent="OnTheGround/SequencePuzzle/Objects" instance=ExtResource("5_7jdtm")]
modulate = Color(0.89, 0.2937, 0.2937, 1)
position = Vector2(410, 14)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("12_qx0gp")

[node name="Signs" type="Node2D" parent="OnTheGround/SequencePuzzle"]
y_sort_enabled = true

[node name="HintSign1" parent="OnTheGround/SequencePuzzle/Signs" instance=ExtResource("13_0f0vj")]
position = Vector2(837, 221)
sprite_frames = ExtResource("14_y538q")

[node name="HintSign2" parent="OnTheGround/SequencePuzzle/Signs" instance=ExtResource("13_0f0vj")]
position = Vector2(950, 221)
sprite_frames = ExtResource("15_imkop")

[node name="Steps" type="Node2D" parent="OnTheGround/SequencePuzzle"]

[node name="SequencePuzzleStep1" type="Node2D" parent="OnTheGround/SequencePuzzle/Steps" node_paths=PackedStringArray("sequence", "hint_sign")]
script = ExtResource("16_e1cf0")
sequence = [NodePath("../../Objects/Yellow"), NodePath("../../Objects/Green"), NodePath("../../Objects/Blue")]
hint_sign = NodePath("../../Signs/HintSign1")

[node name="SequencePuzzleStep2" type="Node2D" parent="OnTheGround/SequencePuzzle/Steps" node_paths=PackedStringArray("sequence", "hint_sign")]
script = ExtResource("16_e1cf0")
sequence = [NodePath("../../Objects/Blue"), NodePath("../../Objects/Green"), NodePath("../../Objects/Yellow"), NodePath("../../Objects/Green")]
hint_sign = NodePath("../../Signs/HintSign2")

[node name="Sub1Controller" type="Node" parent="OnTheGround"]
script = ExtResource("21_vul14")

[node name="Sub1_HintSign1" parent="OnTheGround/Sub1Controller" instance=ExtResource("13_0f0vj")]
position = Vector2(334, 452)
sprite_frames = ExtResource("14_y538q")

[node name="Sub1_HintSign2" parent="OnTheGround/Sub1Controller" instance=ExtResource("13_0f0vj")]
position = Vector2(426, 453)
sprite_frames = ExtResource("15_imkop")

[node name="Sub1_SequencePuzzleStep1" type="Node2D" parent="OnTheGround/Sub1Controller" node_paths=PackedStringArray("sequence", "hint_sign")]
position = Vector2(-1, 0)
script = ExtResource("16_e1cf0")
sequence = [NodePath("../Sub1_Blue"), NodePath("../Sub1_Green"), NodePath("../Sub1_Red")]
hint_sign = NodePath("../Sub1_HintSign1")

[node name="Sub1_SequencePuzzleStep2" type="Node2D" parent="OnTheGround/Sub1Controller" node_paths=PackedStringArray("sequence", "hint_sign")]
position = Vector2(-1, 0)
script = ExtResource("16_e1cf0")
sequence = [NodePath("../Sub1_Red"), NodePath("../Sub1_Blue"), NodePath("../Sub1_Red"), NodePath("../Sub1_Green")]
hint_sign = NodePath("../Sub1_HintSign2")

[node name="Sub1_Blue" parent="OnTheGround/Sub1Controller" instance=ExtResource("5_7jdtm")]
modulate = Color(0, 0.4, 0.6, 1)
position = Vector2(289, 540)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("7_tlsqf")

[node name="Sub1_Green" parent="OnTheGround/Sub1Controller" instance=ExtResource("5_7jdtm")]
modulate = Color(0.188235, 0.717647, 0, 1)
position = Vector2(370, 537)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("10_vul14")

[node name="Sub1_Red" parent="OnTheGround/Sub1Controller" instance=ExtResource("5_7jdtm")]
modulate = Color(0.89, 0.2937, 0.2937, 1)
position = Vector2(446, 539)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("12_qx0gp")

[node name="Sub2Controller" type="Node" parent="OnTheGround"]
script = ExtResource("18_kbbsn")

[node name="Sub2_HintSign1" parent="OnTheGround/Sub2Controller" instance=ExtResource("13_0f0vj")]
position = Vector2(349, 96)
scale = Vector2(0.815253, 0.8670333)
sprite_frames = ExtResource("14_y538q")

[node name="Sub2_HintSign2" parent="OnTheGround/Sub2Controller" instance=ExtResource("13_0f0vj")]
position = Vector2(453, 98)
sprite_frames = ExtResource("15_imkop")

[node name="Sub2_SequencePuzzleStep1" type="Node2D" parent="OnTheGround/Sub2Controller" node_paths=PackedStringArray("sequence", "hint_sign")]
position = Vector2(-1, 0)
script = ExtResource("16_e1cf0")
sequence = [NodePath("../Sub2_Red"), NodePath("../Sub2_Green"), NodePath("../Sub2_Blue")]
hint_sign = NodePath("../Sub2_HintSign1")

[node name="Sub2_SequencePuzzleStep2" type="Node2D" parent="OnTheGround/Sub2Controller" node_paths=PackedStringArray("sequence", "hint_sign")]
position = Vector2(-1, 0)
script = ExtResource("16_e1cf0")
sequence = [NodePath("../Sub2_Blue"), NodePath("../Sub2_Blue"), NodePath("../Sub2_Green"), NodePath("../Sub2_Red")]
hint_sign = NodePath("../Sub2_HintSign2")

[node name="Sub2_Green" parent="OnTheGround/Sub2Controller" instance=ExtResource("5_7jdtm")]
modulate = Color(0.188235, 0.717647, 0, 1)
position = Vector2(378, 188)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("10_vul14")

[node name="Sub2_Blue" parent="OnTheGround/Sub2Controller" instance=ExtResource("5_7jdtm")]
modulate = Color(0, 0.4, 0.6, 1)
position = Vector2(299, 187)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("7_tlsqf")

[node name="Sub2_Red" parent="OnTheGround/Sub2Controller" instance=ExtResource("5_7jdtm")]
modulate = Color(0.89, 0.2937, 0.2937, 1)
position = Vector2(454, 193)
sprite_frames = ExtResource("6_6asd0")
audio_stream = ExtResource("12_qx0gp")

[node name="CollectibleItem" parent="OnTheGround" instance=ExtResource("17_khisk")]
position = Vector2(852, 120)
revealed = false
next_scene = "uid://cdgl7npoa4ego"
item = SubResource("Resource_wop6j")
collected_dialogue = ExtResource("19_tvi5x")
dialogue_title = &"well_done"

[node name="Sign" parent="OnTheGround" instance=ExtResource("20_coke0")]
position = Vector2(184, 434)
direction = 1
text = "First melody: yellow, green, blue."

[node name="ScreenOverlay" type="CanvasLayer" parent="."]

[node name="HUD" parent="." instance=ExtResource("21_itfvh")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
zoom = Vector2(1.333, 1.333)
position_smoothing_enabled = true

[node name="Cinematic" type="Node2D" parent="."]
script = ExtResource("22_yva76")
dialogue = ExtResource("19_tvi5x")
metadata/_custom_type_script = "uid://x1mxt6bmei2o"

[node name="Interactables" type="Node2D" parent="."]

[node name="Keys" type="Node2D" parent="Interactables"]

[node name="Key1" type="Area2D" parent="Interactables/Keys"]
visible = false
position = Vector2(496, 454)
script = ExtResource("23_tlsqf")

[node name="Sprite2D" type="Sprite2D" parent="Interactables/Keys/Key1"]
texture = ExtResource("23_t54xw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/Keys/Key1"]
shape = SubResource("CircleShape2D_tlsqf")
disabled = true

[node name="PickpSound" type="AudioStreamPlayer2D" parent="Interactables/Keys/Key1"]

[node name="Key2" type="Area2D" parent="Interactables/Keys"]
visible = false
position = Vector2(194, 179)
script = ExtResource("23_tlsqf")

[node name="Sprite2D" type="Sprite2D" parent="Interactables/Keys/Key2"]
texture = ExtResource("23_t54xw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/Keys/Key2"]
shape = SubResource("CircleShape2D_tlsqf")
disabled = true

[node name="PickpSound" type="AudioStreamPlayer2D" parent="Interactables/Keys/Key2"]

[node name="Door" type="StaticBody2D" parent="Interactables"]
position = Vector2(373, 24)
scale = Vector2(1.2564764, 9.842572)
script = ExtResource("25_7f16m")

[node name="Sprite2D" type="Sprite2D" parent="Interactables/Door"]
position = Vector2(166, 34)
texture = ExtResource("24_7jdtm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/Door"]
position = Vector2(167.5, 31.5)
shape = SubResource("RectangleShape2D_7f16m")

[node name="InteractArea" type="Area2D" parent="Interactables/Door"]
position = Vector2(168, 43)
collision_layer = 32
script = ExtResource("25_6asd0")
metadata/_custom_type_script = "uid://du8wfijr35r35"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactables/Door/InteractArea"]
position = Vector2(-1, -10)
shape = SubResource("RectangleShape2D_6caan")

[node name="TalkBehavior" type="Node" parent="Interactables/Door" node_paths=PackedStringArray("interact_area")]
script = ExtResource("26_6asd0")
interact_area = NodePath("../InteractArea")
metadata/_custom_type_script = "uid://edcifob4jc4s"

[node name="KeySystem" type="Node" parent="."]
script = ExtResource("27_tlsqf")

[node name="StoryHUDs" type="CanvasLayer" parent="."]

[node name="KeysHUD" type="CanvasLayer" parent="StoryHUDs"]
script = ExtResource("30_6caan")

[node name="CountLabel" type="Label" parent="StoryHUDs/KeysHUD"]
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24

[node name="MsgLabel" type="Label" parent="StoryHUDs/KeysHUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_top = 48.0
offset_right = -600.0
offset_bottom = 71.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[connection signal="solved" from="OnTheGround/SequencePuzzle" to="OnTheGround/CollectibleItem" method="reveal"]
[connection signal="demonstrate_sequence" from="OnTheGround/Sub1Controller/Sub1_HintSign1" to="OnTheGround/Sub1Controller" method="_on_bad_sign_demo"]
[connection signal="demonstrate_sequence" from="OnTheGround/Sub1Controller/Sub1_HintSign1" to="OnTheGround/Sub1Controller/Sub1_SequencePuzzleStep1" method="_on_sub_1_hint_sign_1_demonstrate_sequence"]
[connection signal="demonstrate_sequence" from="OnTheGround/Sub1Controller/Sub1_HintSign2" to="OnTheGround/Sub1Controller" method="_on_good_sign_demo"]
[connection signal="demonstrate_sequence" from="OnTheGround/Sub2Controller/Sub2_HintSign1" to="OnTheGround/Sub2Controller" method="_on_bad_sign_demo"]
[connection signal="demonstrate_sequence" from="OnTheGround/Sub2Controller/Sub2_HintSign2" to="OnTheGround/Sub2Controller" method="_on_good_sign_demo"]
[connection signal="body_entered" from="Interactables/Keys/Key1" to="Interactables/Keys/Key1" method="_on_body_entered"]
[connection signal="body_entered" from="Interactables/Keys/Key2" to="Interactables/Keys/Key2" method="_on_body_entered"]
